# qtpy-error-report-dialog

./: README.md  pyproject.toml
src/qtpy_error_report_dialog/: __init__.py  error_report_dialog_ui.py  qt_dialog.py  tk_dialog.py
tests/: test_smoke.py
